3.3_net_policy/back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-multitool
  namespace: app
  labels:
    app: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 125Mi
            limits:
              cpu: 500m
              memory: 250Mi

---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: app
spec:
  selector:
    app: back
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
