3.3_net_policy/front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-multitool
  namespace: app
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 125Mi
            limits:
              cpu: 500m
              memory: 250Mi

---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: front-svc
spec:
  selector:
    app: front
  ports:
    - name: multitool
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
